cmake_minimum_required(VERSION 3.16)
project(GTEST)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
enable_testing()
include_directories( /CPP-PROJECT/include)
add_executable(gtest_exe /CPP-PROJECT/unittest/unitest.cpp)
target_sources(gtest_exe PRIVATE /CPP-PROJECT/src/exchangeInfo.cpp)
target_link_libraries(gtest_exe GTest::gtest_main cpprestsdk::cpprest Boost::system Threads::Threads OpenSSL::Crypto spdlog::spdlog)
add_test(NAME unit_test COMMAND gtest_exe )